[package]
name = "tlsn_crawle"
version = "0.1.0"
edition = "2021"

[dependencies]
body = "0.1.1"
client = "0.1.1-beta1"
compat = "0.0.0"
http-body-util = "0.1.2"
hyper = "1.4.0"
hyper-util = "0.1.6"
io = "0.0.2"
rt = "0.5.0"
serde_json = "1.0.120"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", version = "0.1.0-alpha.6" }
tlsn-examples = { git = "https://github.com/tlsnotary/tlsn", version = "0.0.0" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", version = "0.1.0-alpha.6" }
tokio = "1.38.0"
tokio-util = "0.7.11"
tracing-subscriber = "0.3.18"

